Fix timeout/compile