@@ -17,6 +17,7 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -69,8 +70,8 @@ public class InfluxdbIT {
 
         List<CompletionStage<Done>> futList = IntStream.rangeClosed(1, maxClients).boxed().parallel()
                 .map(i -> influxDBWriter.writeTestPoints(nPoints, "sensor" + i))
-                .toList();
-        assertThat(CompletableFuture.allOf(futList.toArray(new CompletableFuture[futList.size()]))).succeedsWithin(4 * maxClients, TimeUnit.SECONDS);
+                .collect(Collectors.toList());
+        assertThat(CompletableFuture.allOf(futList.toArray(new CompletableFuture[futList.size()]))).succeedsWithin(5 * maxClients, TimeUnit.SECONDS);
 
         // TODO Activate, when "com.influxdb" %% "influxdb-client-scala" is available for pekko
         //assertThat(influxDBReader.getQuerySync("testMem").length()).isEqualTo(nPoints * maxClients);
